[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tcm-clustering-analysis"
version = "0.1.0"
description = "Git-ready TCM constitution clustering analysis scripts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "openpyxl>=3.1",
  "umap-learn>=0.5",
  "kneed>=0.8",
  "scikit-learn>=1.3",
  "scipy>=1.10",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
